Hermes consumer migration
New tequilla API endpoints
1. /:id/migrate-hermes/status: check if there is money on non-active Hermes and payment channel for new Hermes is empty or new channel does not exists
2. /:id/migrate-hermes: starts migration. Opens a new channel for new Hermes. Than withdraw money from old to new channel
