# tequilapi/endpoints/identities.go
@@ -26,6 +26,7 @@ import (
 	"github.com/ethereum/go-ethereum/common"
 	"github.com/gin-gonic/gin"
 	"github.com/mysteriumnetwork/go-rest/apierror"
+	"github.com/mysteriumnetwork/node/consumer/migration"
 	"github.com/mysteriumnetwork/payments/client"
 	"github.com/pkg/errors"
 
@@ -73,6 +74,7 @@ type identitiesAPI struct {
 	transactor       Transactor
 	bprovider        beneficiaryProvider
 	addressStorage   *payout.AddressStorage
+	hermesMigrator   *migration.HermesMigrator
 }
 
 // AddressProvider provides sc addresses.
@@ -612,6 +614,80 @@ func (ia *identitiesAPI) SavePayoutAddress(c *gin.Context) {
 	utils.WriteAsJSON(par, c.Writer)
 }
 
+// swagger:operation POST /identities/:id/migrate-hermes
+// ---
+// summary: Migrate Hermes
+// description: Migrate from old to new Hermes
+// parameters:
+// - in: path
+//   name: id
+//   description: Identity stored in keystore
+//   type: string
+//   required: true
+// responses:
+//   200:
+//     description: Successfully migrated
+//   403:
+//     schema:
+//       "$ref": "#/definitions/APIError"
+//   500:
+//     description: Internal server error
+//     schema:
+//       "$ref": "#/definitions/APIError"
+func (ia *identitiesAPI) MigrateHermes(c *gin.Context) {
+	id := c.Param("id")
+	if !ia.idm.IsUnlocked(id) {
+		c.Error(apierror.Forbidden("Identity is locked", contract.ErrCodeIDLocked))
+		return
+	}
+	err := ia.hermesMigrator.Start(id)
+	if err != nil {
+		c.Error(apierror.Internal(err.Error(), contract.ErrCodeHermesMigration))
+		log.Err(err).Msgf("could not migrate identity %s", id)
+		return
+	}
+
+	c.Status(http.StatusOK)
+}
+
+// swagger:operation GEY /identities/:id/migrate-hermes/status
+// ---
+// summary: Migration Hermes status
+// description: Migrate from old to new Hermes
+// parameters:
+// - in: path
+//   name: id
+//   description: Identity stored in keystore
+//   type: string
+//   required: true
+// responses:
+//   200:
+//     description: Successfully migrated
+//     schema:
+//       "$ref": "#/definitions/MigrationStatusResponse"
+//   500:
+//     description: Internal server error
+//     schema:
+//       "$ref": "#/definitions/APIError"
+func (ia *identitiesAPI) MigrationHermesStatus(c *gin.Context) {
+	id := c.Param("id")
+	r, err := ia.hermesMigrator.IsMigrationRequired(id)
+	if err != nil {
+		c.Error(apierror.Internal("Failed to check migration status", contract.ErrCodeCheckHermesMigrationStatus))
+		log.Err(err).Msgf("could not check Hermes migration status, id: %s", id)
+		return
+	}
+
+	var status contract.MigrationStatus
+	if r {
+		status = contract.MigrationStatusRequired
+	} else {
+		status = contract.MigrationStatusFinished
+	}
+
+	utils.WriteAsJSON(contract.MigrationStatusResponse{Status: status}, c.Writer)
+}
+
 // AddRoutesForIdentities creates /identities endpoint on tequilapi service
 func AddRoutesForIdentities(
 	idm identity.Manager,
@@ -625,6 +701,7 @@ func AddRoutesForIdentities(
 	bprovider beneficiaryProvider,
 	mover identityMover,
 	addressStorage *payout.AddressStorage,
+	hermesMigrator *migration.HermesMigrator,
 ) func(*gin.Engine) error {
 	idAPI := &identitiesAPI{
 		mover:            mover,
@@ -638,6 +715,7 @@ func AddRoutesForIdentities(
 		transactor:       transactor,
 		bprovider:        bprovider,
 		addressStorage:   addressStorage,
+		hermesMigrator:   hermesMigrator,
 	}
 	return func(e *gin.Engine) error {
 		identityGroup := e.Group("/identities")
@@ -653,6 +731,8 @@ func AddRoutesForIdentities(
 			identityGroup.GET("/:id/payout-address", idAPI.GetPayoutAddress)
 			identityGroup.PUT("/:id/payout-address", idAPI.SavePayoutAddress)
 			identityGroup.PUT("/:id/balance/refresh", idAPI.BalanceRefresh)
+			identityGroup.POST("/:id/migrate-hermes", idAPI.MigrateHermes)
+			identityGroup.GET("/:id/migrate-hermes/status", idAPI.MigrationHermesStatus)
 		}
 		e.POST("/identities-import", idAPI.Import)
 		return nil
